Bug 1956633: [FR]Overlap issue occurs on the Add Registries page of Container tab
Screenshot:
http://engweb.eng.vmware.com/~mshipkovenski/Container_AddRegistries_Overlap_FR.png

Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/17167
Closures-Verified: jenkins <jenkins@vmware.com>
Upgrade-Verified: jenkins <jenkins@vmware.com>
Bellevue-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/main.scss
+++ b/ui/app/src/styles/main.scss
@@ -851,6 +851,12 @@ $main-list-view-right: 10px;
   }
 }
 
+.inline-edit-holder.registryEditHolder {
+  .form-block {
+    margin-bottom: 20px;
+  }
+}
+
 .endpoint-icon,
 .dropdown-holder .dropdown-options {
   img {
